		Before upgrade, close the bbs (mbstat close wait) and make 
		sure the inbound is empty, toss everything.
		Install the new binaries.
		Run "mbfile check". This will create an error in the logfile
		for each file! It will update the filenames on disk to have
		both short and long filenames. Just ignore the errors but check
		for real deleted files.
		Start the bbs again (mbstat open).

	templates:
		The html templates are changed by Joachim Kuwan and now they
		are valid html files validated at http://validator.w3.org/
		This upgrade is not automatic because you might have personal
		changes in the templates that I do not want to overwrite.
		They are in ~/mbsebbs-0.xx.xx/examples/templates.tar and should
		go into ~/english/macro/

	general:
		This may become release 0.36.00 (again).
		Added better support for 8.3 and long filenames by creating
		hard links in the download directories.

	common.a:
		Changed the LFN name mangle functions to prevent 8.3 name 
		collisions. Now the basepart is 4 characters followed by the
		tilde char and then a 3 characters code calculated from the
		16 bits crc of the original filename. Original this was base 5
		followed by a tilde and 2 characters code calculated from the
		checksum of the string modulo 1849. Both methods are different
		then what MS does.
		Added long extension to 3 char extensions for mpeg, smil, perl,
		jpeg and tiff.

	mbsebbs:
		Several user input functions don't allow comma's anymore.
		Uploaded files will now also have a 8.3 hard link to the long
		filename.
		Filesearch on filename now uses regexp to find the files.

	mbfido:
		TIC file forwarding now uses a list of qualified systems to
		forward to, and with this information builds more reliable
		seen-by lines.
		Imported tic files with a new banner file in the archive got
		the wrong filetime in the files database. The mbfile check
		command would detect and correct this.
		TIC files added to the bbs will now also have a 8.3 hard link.