@@ -12,7 +12,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align=right><h5>Last update 31-Oct-2002</h5></div>
+<div align=right><h5>Last update 01-Dec-2002</h5></div>
 
 <div align=center><H1>MBSE BBS Setup - Fidonet nodes.</H1></div>
 <P>
@@ -169,22 +169,43 @@ carefull not to allow a node to connect areas from networks he has no aka in.
 <H3>6. File setup</H3>
 <P>
 <p><table>
-<tr><th nowrap align=left valign=top>Files password</th><td>The password for .tic files.
-<tr><th nowrap align=left valign=top>Mgr password</th><td>The password for the Areamgr and Filemgr.
-<tr><th nowrap align=left valign=top>UplMgr program</th><td>The name of the Filemgr progrom of this node. This could be FileMgr, Allfix, Raid etc.
-<tr><th nowrap align=left valign=top>UplMgr passwd</th><td>The password of the Filemgr if this node.
-<tr><th nowrap align=left valign=top>UplMgr Add +</th><td>Add a "+" in the command to connect areas.
-<tr><th nowrap align=left valign=top>Incl. message</th><td>Send a netmail message for each file to send.
-<tr><th nowrap align=left valign=top>Send TIC file</th><td>Send .tic file to this node.
-<tr><th nowrap align=left valign=top>Advanced TIC</th><td>Send advanced or standard .tic files.
-<tr><th nowrap align=left valign=top>File forward</th><td>Forward TIC files for this node (not yet).
-<tr><th nowrap align=left valign=top>Billing</th><td>Is Costsharing active for this node.
-<tr><th nowrap align=left valign=top>Bill direct</th><td>Send the bill direct or on command.
-<tr><th nowrap align=left valign=top>Credit</th><td>The credit this node has in units.
-<tr><th nowrap align=left valign=top>Debet</th><td>The debet we have with this node (informational).
-<tr><th nowrap align=left valign=top>Add</th><td>Add (or substract) factor to the bill.
-<tr><th nowrap align=left valign=top>Warn level</th><td>The debet level when to write a warning mesage.
-<tr><th nowrap align=left valign=top>Stop level</th><td>The debet level when to stop sending files.
+<tr><th nowrap align=left valign=top>Files password</th><td>The password for
+.tic files.</td></tr>
+<tr><th nowrap align=left valign=top>Mgr password</th><td>The password for the
+Areamgr and Filemgr.</td></tr>
+<tr><th nowrap align=left valign=top>UplMgr program</th><td>The name of the
+Filemgr progrom of this node. This could be FileMgr, Allfix, Raid etc.</td></tr>
+<tr><th nowrap align=left valign=top>UplMgr passwd</th><td>The password of the
+Filemgr if this node.</td></tr>
+<tr><th nowrap align=left valign=top>UplMgr Add +</th><td>Add a "+" in the
+command to connect areas.</td></tr>
+<tr><th nowrap align=left valign=top>Incl. message</th><td>Send a netmail
+message for each file to send.</td></tr>
+<tr><th nowrap align=left valign=top>Send TIC file</th><td>Send .tic file to
+this node.</td></tr>
+<tr><th nowrap align=left valign=top>Advanced TIC</th><td>Send advanced or
+standard .tic files.</td></tr>
+<tr><th nowrap align=left valign=top>Advanced SB</th><td>Send advanced Seen-By
+lines, some systems can't handle this!</td></tr>
+<tr><th nowrap align=left valign=top>To line in TIC</th><td>Send the To line in
+the ticfile. Some braindead systems will forward this line instead of processing
+it and then the next system in the line will fail.</td></tr>
+<tr><th nowrap align=left valign=top>File forward</th><td>Forward TIC files for
+this node (not yet).</td></tr>
+<tr><th nowrap align=left valign=top>Billing</th><td>Is Costsharing active for
+this node.</td></tr>
+<tr><th nowrap align=left valign=top>Bill direct</th><td>Send the bill direct or
+on command (billing is not yet available).</td></tr>
+<tr><th nowrap align=left valign=top>Credit</th><td>The credit this node has in
+units.</td></tr>
+<tr><th nowrap align=left valign=top>Debet</th><td>The debet we have with this
+node (informational).</td></tr>
+<tr><th nowrap align=left valign=top>Add</th><td>Add (or substract) factor to
+the bill.</td></tr>
+<tr><th nowrap align=left valign=top>Warn level</th><td>The debet level when to
+write a warning mesage.</td></tr>
+<tr><th nowrap align=left valign=top>Stop level</th><td>The debet level when to
+stop sending files.</td></tr>
 </table>
 <P>
 <IMG SRC="../images/nodes6.gif">
